Refactor layout and styles for improved responsiveness and structure

--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sonata.in</title>
+    <title>SonataSoft</title>
     <link rel="stylesheet" href="./design/style.css">
 </head>
 <body>
     <section class="header-section">
         <div class="container">
             <div class="navbar">
-                <div class="logo"><h2>Sonata.in</h2></div>
+                <div class="logo">
+                    <h2>Sonata.in</h2>
+                </div>
                 <div class="nav">
                     <ul class="links">
                         <li><a href="#">Home</a></li>
@@ -41,36 +43,117 @@
                             <span>+91 9000090000</span>
                         </div>
                         <div class="social-link">
-
+<!--!soical link soon  -->
                         </div>
                     </div>
                 </div>
             </div>
             <div class="slide-bottom">
                 <h5>Trusted BY 50+ Top Companies</h5>
-                <ul>
-                    <li>Network</li>
-                    <li>Sitemark</li>
-                    <li>Nextmove</li>
-                    <li>vision</li>
-                    <li>Penta</li>
-                    <li>Product</li>
-                </ul>
+                <div class="slide-btns">
+                    <ul class="slide-info">
+                        <li>Network</li>
+                        <li>Sitemark</li>
+                        <li>Nextmove</li>
+                        <li>vision</li>
+                        <li>Penta</li>
+                        <li>Product</li>
+                    </ul>
+                </div>                
             </div>
         </div>
     </section>
-    <section class="experience-section">
+    <section class="experience-section container2">
         <div class="experience">
             <div class="exp-content">
                 <div class="head-exp">
                     <span>[ABOUT US]</span>
+                    <h3>You Experience Is Everything To Us</h3>
                 </div>
                 <div class="about-exp">
-                    
+                    <div class="about-img">
+                        <img src="./assest/img/about-02.jpg" alt="img">
+                    </div>
+                    <div>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, sint repellat eos iusto sit explicabo. Sed odio temporibus !</p>
+                        <button>Let's Get Started</button>
+                    </div>
+                </div>
+                <div class="prog-exp">
+                    <div class="trand">
+                        <span>240+</span>
+                        <span>Business People</span>
+                    </div>
+                    <div class="trand">
+                        <span>100%</span>
+                        <span>Customer Satisfaction</span>
+                    </div>                    
                 </div>
             </div>
             <div class="exp-img">
                 <img src="./assest/img/about-01.jpg" alt="img">
+            </div>
+        </div>
+    </section>
+    <section class="Services-section container2">
+        <div class="services-cont">
+            <div class="service-row">
+                <div class="service-head">
+                    <span>[OUR SERVICES]</span>
+                    <h3>Our Marketing Services</h3>
+                </div>
+                <div class="service-about">
+                    <p>Get the oars in the water and start rowing. Execution is the single biggest factor in achievement, the quicker you will get to the goals!</p>
+                </div>
+            </div>
+            <div class="services">
+                <div class="service">
+                    <h4>Digital Marketing Strategies</h4>
+                    <p>We specialize in creating custom, responsive websites tailored to your business objectives.</p>
+                </div>
+                <div class="service">
+                    <h4>Digital COntent Management</h4>
+                    <p>We specialize in creating custom, responsive websites tailored to your business objectives.</p></div>
+                <div class="service">
+                    <h4>Digital Data Synchronization</h4>
+                    <p>We specialize in creating custom, responsive websites tailored to your business objectives.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="achiev-section container2">
+        <div class="achievement">
+            <div class="achiv-head">
+                <span>[OUR SERVICES]</span>
+                <h3>Our Marketing Services</h3>
+                
+                <div class="achiv-activity">
+                    <div class="activity">
+                        <span>[2020]</span>
+                        <h5>CSS Design Awards</h5>
+                        <p>Some people will tell you there are four while offers may tall you there are eight thing</p>
+                    </div>
+                    <div class="activity">
+                        <span>[2020]</span>
+                        <h5>CSS Design Awards</h5>
+                        <p>Some people will tell you there are four while offers may tall you there are eight thing</p>
+                    </div>
+                    <div class="activity">
+                        <span>[2020]</span>
+                        <h5>CSS Design Awards</h5>
+                        <p>Some people will tell you there are four while offers may tall you there are eight thing</p>
+                    </div>
+                    <div class="activity">
+                        <span>[2020]</span>
+                        <h5>CSS Design Awards</h5>
+                        <p>Some people will tell you there are four while offers may tall you there are eight thing</p>
+                    </div>
+                    <div class="activity">
+                        <span>[2020]</span>
+                        <h5>CSS Design Awards</h5>
+                        <p>Some people will tell you there are four while offers may tall you there are eight thing</p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
