--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SonataSoft</title>
+    <title>SonataSoft - Digital Marketing Agency</title>
+    <link rel="shortcut icon" href="./assest/logo/fevicon.png" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="./design/style.css" />
   </head>
   <body>
@@ -62,7 +64,13 @@
                                 <span>+91 9000090000</span>
                             </div>
                             <div class="social-link">
-                                <!--!soical link soon  -->
+                                <h6>Follow Us <i class="fa-solid fa-arrow-right-long"></i></h6>
+                                <ul class="social-icon">
+                                    <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f fb"></i></a></li>
+                                    <li><a href="#" title="insta"><i class="fa-brands fa-instagram ig"></i></a></li>
+                                    <li><a href="#" title="linkedIn"><i class="fa-brands fa-linkedin-in fb"></i></a></li>
+                                    <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter tw"></i></a></li>
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -70,100 +78,107 @@
             </div>
         </div>
         <div class="slide-bottom">
-          <h2>Trusted BY 50+ Top Companies</h2>
+          <h3>Trusted BY 50+ Top Companies</h3>
           <div class="slide-btns">
-            <ul class="slide-info">
-              <li>Network</li>
-              <li>Sitemark</li>
-              <li>Nextmove</li>
-              <li>vision</li>
-              <li>Penta</li>
-              <li>Product</li>
-            </ul>
+            <marquee behavior="" direction="left">
+                <ul class="slide-info">
+                <li>Network</li>
+                <li>Sitemark</li>
+                <li>Nextmove</li>
+                <li>vision</li>
+                <li>Penta</li>
+                <li>Product</li>
+                </ul>
+            </marquee>
           </div>
         </div>
       </div>
     </section>
-    <section class="experience-section container2">
-      <div class="experience">
-        <div class="exp-content">
-          <div class="head-exp">
-            <span>[ABOUT US]</span>
-            <h2>You Experience Is Everything To Us</h2>
-          </div>
-          <div class="about-exp">
-            <div class="about-img">
-              <img src="./assest/img/about-02.jpg" alt="img" />
+    <section class="experience-section">
+        <div class="container2">
+            <div class="experience">
+                <div class="exp-content">
+                    <div class="head-exp">
+                        <span>[ABOUT US]</span>
+                        <h2>You Experience Is Everything To Us</h2>
+                    </div>
+                    <div class="about-exp">
+                        <div class="about-img">
+                            <img src="./assest/img/about-02.jpg" alt="img" />
+                        </div>
+                        <div class="about-info">
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
+                                sint repellat eos iusto sit explicabo. Sed odio temporibus !
+                            </p>
+                            <button>Let's Get Started</button>
+                        </div>
+                    </div>
+                    <div class="prog-exp">
+                        <div class="trand">
+                            <span>240+</span>
+                            <span>Business People</span>
+                        </div>
+                        <div class="trand">
+                            <span>100%</span>
+                            <span>Customer Satisfaction</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="exp-img">
+                    <img src="./assest/img/about-01.jpg" alt="img" />
+                </div>
             </div>
-            <div>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo,
-                sint repellat eos iusto sit explicabo. Sed odio temporibus !
-              </p>
-              <button>Let's Get Started</button>
-            </div>
-          </div>
-          <div class="prog-exp">
-            <div class="trand">
-              <span>240+</span>
-              <span>Business People</span>
-            </div>
-            <div class="trand">
-              <span>100%</span>
-              <span>Customer Satisfaction</span>
-            </div>
-          </div>
         </div>
-        <div class="exp-img">
-          <img src="./assest/img/about-01.jpg" alt="img" />
-        </div>
-      </div>
     </section>
-    <section class="Services-section container2">
-      <div class="services-cont">
-        <div class="service-row">
-          <div class="service-head">
-            <span>[OUR SERVICES]</span>
-            <h2>Our Marketing Services</h2>
-          </div>
-          <div class="service-about">
-            <p>
-              Get the oars in the water and start rowing. Execution is the
-              single biggest factor in achievement, the quicker you will get to
-              the goals!
-            </p>
-          </div>
+    <section class="Services-section ">
+        <div class="container2">
+            <div class="services-cont">
+                <div class="service-row">
+                    <div class="service-head">
+                        <span>[OUR SERVICES]</span>
+                        <h2>Our Marketing Services</h2>
+                    </div>
+                    <div class="service-about">
+                        <p>
+                        Get the oars in the water and start rowing. Execution is the
+                        single biggest factor in achievement, the quicker you will get to
+                        the goals!
+                        </p>
+                    </div>
+                </div>
+                <div class="services">
+                    <div class="service">
+                        <h4>Digital Marketing Strategies</h4>
+                        <p>
+                        We specialize in creating custom, responsive websites tailored to
+                        your business objectives.
+                        </p>
+                    </div>
+                    <div class="service">
+                        <h4>Digital Content Management</h4>
+                        <p>
+                        We specialize in creating custom, responsive websites tailored to
+                        your business objectives.
+                        </p>
+                    </div>
+                    <div class="service">
+                        <h4>Digital Data Synchronization</h4>
+                        <p>
+                        We specialize in creating custom, responsive websites tailored to
+                        your business objectives.
+                        </p>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="services">
-          <div class="service">
-            <h4>Digital Marketing Strategies</h4>
-            <p>
-              We specialize in creating custom, responsive websites tailored to
-              your business objectives.
-            </p>
-          </div>
-          <div class="service">
-            <h4>Digital COntent Management</h4>
-            <p>
-              We specialize in creating custom, responsive websites tailored to
-              your business objectives.
-            </p>
-          </div>
-          <div class="service">
-            <h4>Digital Data Synchronization</h4>
-            <p>
-              We specialize in creating custom, responsive websites tailored to
-              your business objectives.
-            </p>
-          </div>
-        </div>
-      </div>
     </section>
-    <section class="achiev-section container2">
+    <section class="achiev-section">
+        <div class="container2">
       <div class="achievement">
         <div class="achiv-head">
-          <span>[OUR SERVICES]</span>
-          <h2>Our Marketing Services</h2>
+          <span>[OUR ACHIEVEMENT AWARDS]</span>
+          <h2>Check Our Awards And Achievement</h2>
         </div>
         <div class="achiv-activity">
           <div class="activity">
@@ -216,8 +231,10 @@
           </div>
         </div>
       </div>
+      </div>
     </section>
-    <section class="work-section container2">
+    <section class="work-section">
+        <div class="container2">
         <div class="work-cont">
             <div class="work-row">
                 <div class="work-head">
@@ -230,7 +247,7 @@
             </div>
             <div class="client-review">
                 <div class="work-row2">
-                    <div class="service">
+                    <div class="client-box">
                         <div class="client-profile">
                             <div class="client-img"></div>
                         </div>
@@ -239,7 +256,7 @@
                             <p>Client Reviews</p>
                         </div>
                     </div>
-                    <div class="service">
+                    <div class="client-review">
                         <span>4.5</span>
                         <p>Customer are Satisfied with the Technology Services.</p>
                     </div>
@@ -261,8 +278,10 @@
                 </div>
             </div>
         </div>
+        </div>
     </section>
-    <section class="Team-section container2">
+    <section class="Team-section">
+        <div class="container2">
         <div class="team-members">
             <div class="staff">
                 <div class="staff-intro">
@@ -312,8 +331,10 @@
                 </div>
             </div>
         </div>
+        </div>
     </section>
-    <section class="contact-section container2">
+    <section class="contact-section">
+        <div class="container2">
         <div class="contact-me">
             <div class="contact-info">
                 <div class="contact-head">
@@ -362,6 +383,7 @@
                     </form>
                 </div>
             </div>
+        </div>
         </div>
     </section>
     <footer>
