Update CSS for improved layout and styling; enhance navigation links with smooth scrolling and active state

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
           </div>
           <div class="nav">
             <ul class="links">
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
-              <li><a href="#">Services</a></li>
-              <li><a href="#">Blog</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#home" class="nav-link">Home</a></li>
+              <li><a href="#about" class="nav-link">About</a></li>
+              <li><a href="#service-btn" class="nav-link">Services</a></li>
+              <li><a href="#blog" class="nav-link">Blog</a></li>
+              <li><a href="#contact" class="nav-link">Contact</a></li>
             </ul>
           </div>
           <div class="mobile">
@@ -94,7 +94,7 @@
         </div>
       </div>
     </section>
-    <section class="experience-section">
+    <section class="experience-section section" id="about">
         <div class="container2">
             <div class="experience">
                 <div class="exp-content">
@@ -131,7 +131,7 @@
             </div>
         </div>
     </section>
-    <section class="Services-section ">
+    <section class="Services-section" id="service-btn">
         <div class="container2">
             <div class="services-cont">
                 <div class="service-row">
@@ -368,7 +368,7 @@
         </div>
         </div>
     </section>
-    <section class="contact-section">
+    <section class="contact-section" id="contact">
         <div class="container2">
         <div class="contact-me">
             <div class="contact-info">
@@ -430,44 +430,61 @@
         </div>
     </section>
     <footer>
-        <div class="foot-container">
-            <div class="foot-content">
-                <div class="logo">
-                    <div class="logo-img">
-                    <img src="./assest/logo/logo.png" alt="logo" />
+        <section class="footer-section">
+            <div class="foot-container">
+                <div class="foot-content">
+                    <div class="logo">
+                        <div class="logo-img">
+                            <img src="./assest/logo/logo.png" alt="logo" />
+                        </div>
                     </div>
-                </div>
-                <div class="office">
-                    <h3>Office</h3>
-                    <div class="off-locat">
-                        <p>info@example.com</p>
-                        <span>+9112312123</span>
-                        <p>1472 ambala road Zirakpur</p>
-                        <span>1-1000-555-500</span>
+                    <div class="office">
+                        <h3>Office</h3>
+                        <div class="off-locat">
+                            <p>info@example.com</p>
+                            <span>+9112312123</span>
+                            <p>1472 ambala road Zirakpur</p>
+                            <span>1-1000-555-500</span>
+                        </div>
                     </div>
-                </div>
-                <div class="nav2">
-                    <h3>Quick links</h3>
-                    <ul class="links2">
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </div>
-                <div class="newsletter">
-                    <h3>Newsletter</h3>
-                    <div>
-                        <p>Sign Up to our Newsletter to get the latest news and offers.</p>
-                        <input type="email" placeholder="Enter Your Email">
-                        <button>Send</button>
+                    <div class="nav2">
+                        <h3>Quick links</h3>
+                        <ul class="links2">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">About</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Blog</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                    </div>
+                    <div class="newsletter">
+                        <h3>Newsletter</h3>
+                        <div class="talk-me">
+                            <p>Sign Up to our Newsletter to get the latest news and offers.</p>
+                            <div class="send-msg">
+                                <input type="email" placeholder="Enter Your Email">
+                                <i class="fa-solid fa-paper-plane"></i>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="copyright">
-            <p>© 2025 Develop and design by Baljeet Singh</p> 
+        </section>
+        <div class="footer-end">
+            <div class="copyright">.
+                <div class="copyright-logo">
+                    <p>© 2025 Develop and design by Baljeet Singh</p> 
+                </div>
+                <div class="footer-social">
+                    <h6>Follow Us <i class="fa-solid fa-arrow-right-long"></i></h6>
+                    <ul class="social-icon media">
+                        <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f"></i></a></li>
+                        <li><a href="#" title="insta"><i class="fa-brands fa-instagram ig"></i></a></li>
+                        <li><a href="#" title="linkedIn"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                        <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter tw"></i></a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
     </footer>
   </body>
