Add font styles and responsive design adjustments
- Introduced @font-face declarations for Roboto font family in font.css.
- Implemented responsive typography and layout adjustments in responsive.css for various screen sizes.
- Enhanced readability and layout for headings, paragraphs, and various components across different devices.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="shortcut icon" href="./assest/logo/fevicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"/>
     <link rel="stylesheet" href="./design/style.css" />
+    <link rel="stylesheet" href="./design/responsive.css">
+    
+    
   </head>
   <body>
     <section class="header-section">
@@ -187,54 +190,73 @@
                 </div>
                 <div class="achiv-activity">
                 <div class="activity">
-                    <div class="year"><span class="box-headline">[2020]</span></div>
-                    <div class="achive"><h5>CSS Design Awards</h5></div>
-                    <div class="activity-about">
-                        <p>
-                            Some people will tell you there are four while offers may tall
-                            you there are eight thing
-                        </p>
-                    </div>
-                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
-                </div>
-                <div class="activity">
-                    <div class="year"><span class="box-headline">[2020]</span></div>
-                    <div class="achive"><h5>CSS Design Awards</h5></div>
-                    <div class="activity-about">
-                        <p> Some people will tell you there are four while offers may tall you there are eight thing </p>
-                    </div>
-                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
-                </div>
-                <div class="activity">
-                    <div class="year"><span class="box-headline">[2020]</span></div>
-                    <div class="achive"><h5>CSS Design Awards</h5></div>
-                    <div class="activity-about">
-                        <p>
-                            Some people will tell you there are four while offers may tall
-                            you there are eight thing
-                        </p>
-                    </div>
-                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
-                </div>
-                <div class="activity">
-                    <div class="year"><span class="box-headline">[2020]</span></div>
-                    <div class="achive"><h5>CSS Design Awards</h5></div>
-                    <div class="activity-about">
-                        <p>
-                            Some people will tell you there are four while offers may tall
-                            you there are eight thing
-                        </p>
-                    </div>
-                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
-                </div>
-                <div class="activity">
-                    <div class="year"><span class="box-headline">[2020]</span></div>
-                    <div class="achive"><h5>CSS Design Awards</h5></div>
+                    <div class="hist">
+                        <div class="year"><span class="box-headline">[2020]</span></div>
+                        <div class="achive"><h5>CSS Design Awards</h5></div>
                         <div class="activity-about">
-                            <p>Some people will tell you there are four while offers may tall you there are eight thing </p>
+                            <p>
+                                Some people will tell you there are four while offers may tall
+                                you there are eight thing
+                            </p>
                         </div>
-                        <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
                     </div>
+                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
+                </div>
+                <div class="achiv-activity">
+                <div class="activity">
+                    <div class="hist">
+                        <div class="year"><span class="box-headline">[2020]</span></div>
+                        <div class="achive"><h5>CSS Design Awards</h5></div>
+                        <div class="activity-about">
+                            <p>
+                                Some people will tell you there are four while offers may tall
+                                you there are eight thing
+                            </p>
+                        </div>
+                    </div>
+                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
+                </div>
+                <div class="achiv-activity">
+                <div class="activity">
+                    <div class="hist">
+                        <div class="year"><span class="box-headline">[2020]</span></div>
+                        <div class="achive"><h5>CSS Design Awards</h5></div>
+                        <div class="activity-about">
+                            <p>
+                                Some people will tell you there are four while offers may tall
+                                you there are eight thing
+                            </p>
+                        </div>
+                    </div>
+                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
+                </div>
+                <div class="achiv-activity">
+                <div class="activity">
+                    <div class="hist">
+                        <div class="year"><span class="box-headline">[2020]</span></div>
+                        <div class="achive"><h5>CSS Design Awards</h5></div>
+                        <div class="activity-about">
+                            <p>
+                                Some people will tell you there are four while offers may tall
+                                you there are eight thing
+                            </p>
+                        </div>
+                    </div>
+                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
+                </div>
+                <div class="achiv-activity">
+                <div class="activity">
+                    <div class="hist">
+                        <div class="year"><span class="box-headline">[2020]</span></div>
+                        <div class="achive"><h5>CSS Design Awards</h5></div>
+                        <div class="activity-about">
+                            <p>
+                                Some people will tell you there are four while offers may tall
+                                you there are eight thing
+                            </p>
+                        </div>
+                    </div>
+                    <div class="achive-icon"><i class="fa-solid fa-arrow-right"></i></div>
                 </div>
             </div>
         </div>
@@ -280,7 +302,7 @@
                             <i class="fa-solid fa-star"></i>
                             <i class="fa-solid fa-star"></i>
                         </div>
-                        <p><i>We specialize in creating custom, responsive websites tailored to your business objectives. We specialize in creating custom, responsive websites tailored to your business objectives. </i> </p>
+                        <p>We specialize in creating custom, responsive websites tailored to your business objectives. We specialize in creating custom, responsive websites tailored to your business objectives.</p>
                         <div class="client-name">
                             <h6>John Doe</h6>
                             <span>Director</span>
@@ -336,10 +358,10 @@
                 </div>
                 <div class="member">
                     <div class="mem-img">
-                        <img src="./assest/team/team-03.jpg" alt="img" />
+                            <img src="./assest/team/team-03.jpg" alt="img" />
                         <div class="name-role">
-                            <h4>Siri</h4>
-                            <p>Developer</p>
+                            <h4>Gamora</h4>
+                            <p>Manager</p>
                         </div>
                         <ul class="link-icon">
                             <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f fb"></i></a></li>
@@ -353,7 +375,7 @@
                     <div class="mem-img">
                         <img src="./assest/team/team-04.jpg" alt="img" />
                         <div class="name-role">
-                            <h4>Alexa</h4>
+                            <h4>Nebula</h4>
                             <p>Manager</p>
                         </div>
                         <ul class="link-icon">
@@ -414,10 +436,9 @@
                 <div class="form">
                     <div class="form-type">
                         <h4>How May We Help You!</h4>
-                        <p> Please fill out the form below with your details and message, and
-                        our team will get back to you as soon as possible.</p>
+                        <p> Please fill out the form below with your details and message, and our team will get back to you as soon as possible.</p>
                     </div>
-                    <form action="#">
+                    <form action="#" class="user-detail">
                         <input type="text" placeholder="Name*" required /> <br><br>
                         <input type="email" placeholder="Email*" required /> <br><br>
                         <input type="text" placeholder="Subject*" required /> <br><br>
@@ -471,7 +492,7 @@
             </div>
         </section>
         <div class="footer-end">
-            <div class="copyright">.
+            <div class="copyright">
                 <div class="copyright-logo">
                     <p>© 2025 Develop and design by Baljeet Singh</p> 
                 </div>
@@ -489,4 +510,4 @@
     </footer>
   </body>
   <script type="module" src="./script/sctipt.js"></script>
-</html>
+  </html>
