Enhance navigation with responsive sidebar and mobile-friendly design

--- a/index.html
+++ b/index.html
@@ -15,23 +15,27 @@
     <section class="header-section">
       <div class="container">
         <div class="navbar">
-          <div class="logo">
-            <div class="logo-img">
-              <img src="./assest/logo/logo.png" alt="logo" />
+            <div class="logo">
+                <div class="logo-img">
+                    <img src="./assest/logo/logo.png" alt="logo" />
+                </div>
             </div>
-          </div>
-          <div class="nav">
-            <ul class="links">
-              <li><a href="#home" class="nav-link">Home</a></li>
-              <li><a href="#about" class="nav-link">About</a></li>
-              <li><a href="#service-btn" class="nav-link">Services</a></li>
-              <li><a href="#blog" class="nav-link">Blog</a></li>
-              <li><a href="#contact" class="nav-link">Contact</a></li>
-            </ul>
-          </div>
-          <div class="mobile">
-            <span> <i class="fa-solid fa-phone"></i> +91 9000090000</span>
-          </div>
+            <div class="nav">
+                <input type="checkbox" id="active-sidebar" placeholder="0">
+                <label for="active-sidebar" class="open-sidebar"><i class="fa-solid fa-bars"></i></label>
+                <label for="active-sidebar" class="close-sidebar"><i class="fa-solid fa-x"></i></label>
+                <label for="active-sidebar" id="overlay"></label>
+                <ul class="links">
+                <li><a href="#home" class="nav-link">Home</a></li>
+                <li><a href="#about" class="nav-link">About</a></li>
+                <li><a href="#service-btn" class="nav-link">Services</a></li>
+                <li><a href="#blog" class="nav-link">Blog</a></li>
+                <li><a href="#contact" class="nav-link">Contact</a></li>
+                </ul>
+                <div class="mobile">
+                    <span> <i class="fa-solid fa-phone"></i> +91 9000090000</span>
+                </div>
+            </div>
         </div>
       </div>
     </section>
