--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
                             <img src="./assest/img/slider-03.jpeg" alt="Slide 3">
                         </div>
                     </div>
-                    <div class="navigation">
-                        <button class="nav-btn prev">&#10094;</button>
-                        <button class="nav-btn next">&#10095;</button>
-                    </div>
                     <div class="slide-content">
                         <div class="slider-head">
                             <div class="heading">
@@ -67,8 +63,10 @@
                                 history you know it is true. There are many people in the
                                 world dolore magna aliqua
                                 </p>
-                                <button>Let's Get Started <i class="fa-solid fa-arrow-right"></i></button>
-                                <span><i class="fa-solid fa-phone"></i> +91 9000090000</span>
+                                <div class="head-btn">
+                                    <button>Let's Get Started <i class="fa-solid fa-arrow-right"></i></button>
+                                    <span><i class="fa-solid fa-phone"></i> +91 9000090000</span>
+                                </div>
                             </div>
                             <div class="social-link">
                                 <h6>Follow Us <i class="fa-solid fa-arrow-right-long"></i></h6>
