Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -45,13 +45,16 @@
                 <div class="slider">
                     <div class="slides">
                         <div class="slide">
-                            <img src="./assest/img/slider-01.jpg" alt="Slide 1">
+                            <img src="./assest/img/slider-01.jpg" alt="Slide 1" class="d-view">
+                            <img src="./assest/img/slider-m-01.jpg" alt="" class="m-view">
                         </div>
                         <div class="slide">
-                            <img src="./assest/img/slider-02.jpg" alt="Slide 2">
+                            <img src="./assest/img/slider-02.jpg" alt="Slide 2" class="d-view">
+                            <img src="./assest/img/slider-m-02.jpg" alt="" class="m-view">
                         </div>
                         <div class="slide">
-                            <img src="./assest/img/slider-03.jpeg" alt="Slide 3">
+                            <img src="./assest/img/slider-03.jpeg" alt="Slide 3" class="d-view">
+                            <img src="./assest/img/slider-m-03.jpg" alt="" class="m-view">
                         </div>
                     </div>
                     <div class="slide-content">
