--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
       </div>
     </section>
-    <section class="hero-section">
+    <section class="hero-section" id="home">
         <div class="container2">
             <div class="slide-show">
                 <div class="slider">
@@ -395,7 +395,7 @@
         </div>
         </div>
     </section>
-    <section class="contact-section" id="contact">
+    <section class="contact-section">
         <div class="container2">
         <div class="contact-me">
             <div class="contact-info">
@@ -437,18 +437,18 @@
                     </div>
                 </div>
             </div>
-            <div class="form-div">
+            <div class="form-div" id="contact">
                 <div class="form">
                     <div class="form-type">
                         <h4>How May We Help You!</h4>
                         <p> Please fill out the form below with your details and message, and our team will get back to you as soon as possible.</p>
                     </div>
-                    <form action="#" class="user-detail">
-                        <input type="text" placeholder="Name*" required /> <br><br>
-                        <input type="email" placeholder="Email*" required /> <br><br>
-                        <input type="text" placeholder="Subject*" required /> <br><br>
-                        <textarea name="message" id="message" placeholder="Write Message"></textarea> <br> <br>
-                        <button type="submit">Send Message</button>
+                    <form action="" class="user-detail" id="form">
+                        <input type="text" name="name" placeholder="Name*" required pattern="[A-Za-z\s]+" /> <br><br>
+                        <input type="email" name="email" placeholder="Email*" required /> <br><br>
+                        <input type="text" name="subject" placeholder="Subject*" required /> <br><br>
+                        <textarea name="message" id="message" placeholder="Write Message"></textarea> <br><br>
+                        <button type="submit" id="data-submit">Send Message</button>
                     </form>
                 </div>
             </div>
