Refactor CSS and JavaScript files for improved organization and maintainability

--- a/index.html
+++ b/index.html
@@ -391,6 +391,66 @@
                         </ul>
                     </div>
                 </div>
+                <div class="member">
+                    <div class="mem-img">
+                        <img src="./assest/team/team-01.jpg" alt="img" />
+                        <div class="name-role">
+                            <h4>HariOm</h4>
+                            <p>Vice President</p>
+                        </div>
+                        <ul class="link-icon">
+                            <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f fb"></i></a></li>
+                            <li><a href="#" title="insta"><i class="fa-brands fa-instagram ig"></i></a></li>
+                            <li><a href="#" title="linkedIn"><i class="fa-brands fa-linkedin-in fb"></i></a></li>
+                            <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter tw"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="mem-img">
+                        <img src="./assest/team/team-02.jpg" alt="img" />
+                        <div class="name-role">
+                            <h4>Vikas</h4>
+                            <p>Developer</p>
+                        </div>
+                        <ul class="link-icon">
+                            <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f fb"></i></a></li>
+                            <li><a href="#" title="insta"><i class="fa-brands fa-instagram ig"></i></a></li>
+                            <li><a href="#" title="linkedIn"><i class="fa-brands fa-linkedin-in fb"></i></a></li>
+                            <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter tw"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="mem-img">
+                            <img src="./assest/team/team-03.jpg" alt="img" />
+                        <div class="name-role">
+                            <h4>Gamora</h4>
+                            <p>Manager</p>
+                        </div>
+                        <ul class="link-icon">
+                            <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f fb"></i></a></li>
+                            <li><a href="#" title="insta"><i class="fa-brands fa-instagram ig"></i></a></li>
+                            <li><a href="#" title="linkedIn"><i class="fa-brands fa-linkedin-in fb"></i></a></li>
+                            <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter tw"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="member">
+                    <div class="mem-img">
+                        <img src="./assest/team/team-04.jpg" alt="img" />
+                        <div class="name-role">
+                            <h4>Nebula</h4>
+                            <p>Manager</p>
+                        </div>
+                        <ul class="link-icon">
+                            <li><a href="#" title="facebook"><i class="fa-brands fa-facebook-f fb"></i></a></li>
+                            <li><a href="#" title="insta"><i class="fa-brands fa-instagram ig"></i></a></li>
+                            <li><a href="#" title="linkedIn"><i class="fa-brands fa-linkedin-in fb"></i></a></li>
+                            <li><a href="#" title="twitter"><i class="fa-brands fa-x-twitter tw"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
         </div>
